<!--
  ~ Copyright 2016 Todd Burgess Media
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Tech Dive</string>
    <string name="title_activity_settings">Settings</string>

    <!-- FAQ Question List Dialog -->
    <string name="nothing_dialog_title">Nothing Found</string>
    <string name="nothing_dialog_body_github">Your search term found nothing by programming language. Search by topic instead?</string>
    <string name="nothing_dialog_body">Your search term found nothing</string>
    <string name="show_all_time">Show All Time</string>
    <string name="show_today">Show Today</string>
    <string name="show_this_month">Show This Month</string>
    <string name="show_since_yesterday">Show Since Yesterday</string>
    <string name="show_this_year">Show This Year</string>
    <string name="refresh">Refresh</string>
    <string name="nothing_ok_button">OK</string>
    <string name="no_github_desc">No description available</string>

    <string name="questions_time_frame">Time Frame: </string>

    <string name="whats_hot_faq">FAQ</string>
    <string name="whats_hot_search">Search Questions</string>

    <string name="github_language">Language: </string>
    <string name="github_searchterm">Search Term: </string>

    <string name="time_dialog_title">Select Time Period</string>
    <string-array name="time_dialog">
        <item>All Time</item>
        <item>This Year</item>
        <item>This Month</item>
        <item>Since Yesterday</item>
        <item>Today</item>
    </string-array>

    <string name="site_select_title">Select Site</string>
    <string name="github_menu_meetup">Meetup</string>
    <string name="github_activity_loading">Loading GitHub Projects</string>
    <string name="menu_meetup_github">GitHub Projects</string>

    <string name="meetupactivity_gettingGPS">Getting GPS location</string>
    <string name="meetupactivity_finding_groups">Finding Meetup Groups</string>

    <string name="questions_dialog_loading">Loading questions</string>
    <string name="questions_failure_toast">No Network Connection!</string>

    <string name="rv_github_no_language">No Language Specified</string>
    <string name="rv_github_language">Language:</string>
    <string name="rv_github_created_at">Created At:</string>
    <string name="rv_github_last_updated">Last Updated:</string>
    <string name="rv_github_forks">Forks:</string>
    <string name="rv_github_watchers">Watchers:</string>
    <string name="rv_faq_views">Views:</string>
    <string name="rv_faq_answers">Answers:</string>
    <string name="rv_faq_date_created">Date Created:</string>

    <string name="tags_dialog_ranking">Rank by: </string>

    <string name="tags_dialog_sort">Sort by:</string>

    <string-array name="site_select_array">
        <item>GameDev</item>
        <item>Mathematics</item>
        <item>Programmers</item>
        <item>Security</item>
        <item>StackOverflow</item>
        <item>SuperUser</item>
    </string-array>

    <string-array name="select_select_display">
        <item>Game Development</item>
        <item>Mathematics</item>
        <item>Programmers</item>
        <item>Security</item>
        <item>Stack Overflow</item>
        <item>Super User</item>
    </string-array>

    <string-array name="tag_longpress_dialog">
        <item>Load Related Tags</item>
    </string-array>

    <string-array name="tag_longpress_dialog_back">
        <item>Go Back</item>
    </string-array>

    <string-array name="tags_ranking">
        <item>Activity</item>
        <item>Popularity</item>
    </string-array>

    <string-array name="tags_sortby">
        <item>Usage</item>
        <item>Alphabetically</item>
    </string-array>


</resources>
